@@ -13,7 +13,7 @@ public class FunctionsTest {
     public void whenLinearFunctionThenLinearResults() {
         Functions functions = new Functions();
         List<Double> result = functions.diapason(5, 8, x -> 2 * x + 1);
-        List<Double> expected = Arrays.asList(11D, 13D, 15D);
+        List<Double> expected = List.of(11D, 13D, 15D);
         assertThat(result, is(expected));
     }
 
@@ -21,7 +21,7 @@ public class FunctionsTest {
     public void testQuadraticFunc() {
         Functions functions = new Functions();
         List<Double> result = functions.diapason(1, 5, x -> x * x);
-        List<Double> expected = Arrays.asList(1D, 4D, 9D, 16D);
+        List<Double> expected = List.of(1D, 4D, 9D, 16D);
         assertThat(result, is(expected));
     }
 
@@ -29,7 +29,7 @@ public class FunctionsTest {
     public void testIndicativeFunc() {
         Functions functions = new Functions();
         List<Double> result = functions.diapason(1, 5, x -> Math.pow(2, x));
-        List<Double> expected = Arrays.asList(2D, 4D, 8D, 16D);
+        List<Double> expected = List.of(2D, 4D, 8D, 16D);
         assertThat(result, is(expected));
     }
 }
