@@ -9,7 +9,7 @@ import java.util.function.Predicate;
 import static org.junit.Assert.*;
 
 public class SchoolTest {
-    private List<Student> students = Arrays.asList(new Student("A", 10),
+    private List<Student> students = List.of(new Student("A", 10),
             new Student("B", 20),
             new Student("C", 40),
             new Student("D", 50),
@@ -22,7 +22,7 @@ public class SchoolTest {
     @Test
     public void testGetStudents10A() {
         Predicate<Student> predicate = student -> student.getScore() >= 70 && student.getScore() <= 100;
-        List<Student> expected = Arrays.asList(new Student("F", 70),
+        List<Student> expected = List.of(new Student("F", 70),
                 new Student("G", 80),
                 new Student("H", 90),
                 new Student("I", 100));
@@ -32,7 +32,7 @@ public class SchoolTest {
     @Test
     public void testGetStudents10B() {
         Predicate<Student> predicate = student -> student.getScore() >= 50 && student.getScore() < 70;
-        List<Student> expected = Arrays.asList(new Student("D", 50),
+        List<Student> expected = List.of(new Student("D", 50),
                 new Student("E", 60));
         assertEquals(expected, new School().collect(students, predicate));
     }
@@ -40,7 +40,7 @@ public class SchoolTest {
     @Test
     public void testGetStudents10C() {
         Predicate<Student> predicate = student -> student.getScore() >= 0 && student.getScore() < 50;
-        List<Student> expected = Arrays.asList(new Student("A", 10),
+        List<Student> expected = List.of(new Student("A", 10),
                 new Student("B", 20),
                 new Student("C", 40));
         assertEquals(expected, new School().collect(students, predicate));
